Fix wave transition - remove scale distortion and use proper margin-bottom

--- a/style.css
+++ b/style.css
@@ -306,11 +306,7 @@ body {
 @media (max-width: 480px) {
     .svg-wave-inside {
         margin-top: 25px;
-        margin-bottom: -50px;
-    }
-    .svg-wave-inside svg {
-        transform: scaleY(1.2);
-        margin-bottom: -10px;
+        margin-bottom: -60px;
     }
 }
 
@@ -318,11 +314,7 @@ body {
 @media (min-width: 481px) and (max-width: 768px) {
     .svg-wave-inside {
         margin-top: 35px;
-        margin-bottom: -40px;
-    }
-    .svg-wave-inside svg {
-        transform: scaleY(1.1);
-        margin-bottom: -5px;
+        margin-bottom: -80px;
     }
 }
 
